[patch] fix output path

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "prisma-frontend",
-    "version": "0.0.4",
+    "version": "0.0.5",
     "description": "A Prisma generator for creating frontend-friendly exports (types and enums).",
     "keywords": [
         "prisma",
@@ -33,8 +33,8 @@
         "lint": "virmator lint fix",
         "publish": "virmator publish npm run test:all",
         "start": "txs src/index.ts",
-        "test": "virmator test node src/generator/generator.test.ts && virmator test web src/frontend.test.ts",
-        "test:all": "npm run compile && concurrently --colors --kill-others-on-fail -c auto --names tests,spelling,format,deps,lint \"npm run test:coverage\" \"npm run test:spelling\" \"npm run test:format\" \"npm run test:deps\" \"npm run test:lint\"",
+        "test": "npm run compile && virmator test node src/generator/generator.test.ts && virmator test web src/frontend.test.ts",
+        "test:all": "concurrently --colors --kill-others-on-fail -c auto --names tests,spelling,format,deps,lint \"npm run test:coverage\" \"npm run test:spelling\" \"npm run test:format\" \"npm run test:deps\" \"npm run test:lint\"",
         "test:coverage": "npm run test coverage",
         "test:deps": "virmator deps check",
         "test:format": "virmator format check",
@@ -90,6 +90,7 @@
         "prettier-plugin-sort-json": "^4.0.0",
         "prettier-plugin-toml": "^2.0.1",
         "prisma": "^5.18.0",
+        "prisma-frontend": "./",
         "type-fest": "^4.25.0",
         "typedoc": "^0.26.6",
         "typescript": "^5.5.4",
