--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -31,4 +31,5 @@ jobs:
               shell: bash
               run: |
                   npm ci
+                  npx playwright install --with-deps
                   npm run test:all
