--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "prisma-frontend",
-    "version": "0.1.0",
+    "version": "0.1.1",
     "description": "A Prisma generator for creating frontend-friendly exports (types and enums).",
     "keywords": [
         "prisma",
@@ -26,7 +26,7 @@
     "main": "dist/index.cjs",
     "module": "dist/index.js",
     "types": "src/index.ts",
-    "bin": "src/cli.ts",
+    "bin": "entry-point.sh",
     "scripts": {
         "compile": "virmator compile && cp src/index.cjs dist/index.cjs",
         "format": "virmator format",
