--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "prisma-frontend",
-    "version": "0.1.4",
+    "version": "0.1.5",
     "description": "A Prisma generator for creating frontend-friendly exports (types and enums).",
     "keywords": [
         "prisma",
@@ -26,7 +26,7 @@
     "main": "dist/index.cjs",
     "module": "dist/index.js",
     "types": "src/index.ts",
-    "bin": "entry-point.sh",
+    "bin": "bin.js",
     "scripts": {
         "compile": "virmator compile && cp src/index.cjs dist/index.cjs",
         "format": "virmator format",
@@ -43,59 +43,58 @@
         "test:update": "npm run test update"
     },
     "dependencies": {
-        "@augment-vir/common": "^29.3.0",
-        "@augment-vir/node-js": "^29.3.0",
-        "@prisma/client": "^5.18.0",
-        "@prisma/generator-helper": "^5.18.0",
-        "@prisma/internals": "^5.18.0",
-        "object-shape-tester": "^2.4.0",
-        "run-time-assertions": "^1.5.2",
-        "tsx": "^4.17.0"
+        "@augment-vir/assert": "^30.8.2",
+        "@augment-vir/common": "^30.8.2",
+        "@augment-vir/node": "^30.8.2",
+        "@prisma/client": "^5.22.0",
+        "@prisma/generator-helper": "^5.22.0",
+        "@prisma/internals": "^5.22.0",
+        "object-shape-tester": "^3.1.1",
+        "tsx": "^4.19.2"
     },
     "devDependencies": {
-        "@eslint/eslintrc": "^3.1.0",
-        "@eslint/js": "^9.9.0",
-        "@open-wc/testing": "^4.0.0",
-        "@stylistic/eslint-plugin": "^2.6.4",
-        "@stylistic/eslint-plugin-ts": "^2.6.4",
-        "@types/mocha": "^10.0.7",
-        "@types/node": "^22.5.0",
-        "@typescript-eslint/eslint-plugin": "^8.2.0",
-        "@web/dev-server-esbuild": "^1.0.2",
-        "@web/test-runner": "^0.18.3",
+        "@augment-vir/test": "^30.8.2",
+        "@eslint/eslintrc": "^3.2.0",
+        "@eslint/js": "9.14.0",
+        "@stylistic/eslint-plugin": "^2.11.0",
+        "@stylistic/eslint-plugin-ts": "^2.11.0",
+        "@types/node": "^22.9.0",
+        "@typescript-eslint/eslint-plugin": "^8.15.0",
+        "@web/dev-server-esbuild": "^1.0.3",
+        "@web/test-runner": "^0.19.0",
         "@web/test-runner-commands": "^0.9.0",
         "@web/test-runner-playwright": "^0.11.0",
-        "@web/test-runner-visual-regression": "^0.9.0",
-        "cspell": "^8.14.2",
-        "dependency-cruiser": "^16.4.0",
-        "esbuild": "^0.23.1",
-        "eslint": "^9.9.0",
+        "@web/test-runner-visual-regression": "^0.10.0",
+        "cspell": "^8.16.0",
+        "dependency-cruiser": "^16.6.0",
+        "esbuild": "^0.24.0",
+        "eslint": "9.14.0",
         "eslint-config-prettier": "^9.1.0",
-        "eslint-plugin-jsdoc": "^50.2.2",
+        "eslint-plugin-jsdoc": "^50.5.0",
         "eslint-plugin-monorepo-cop": "^1.0.2",
-        "eslint-plugin-playwright": "^1.6.2",
+        "eslint-plugin-playwright": "^2.1.0",
         "eslint-plugin-prettier": "^5.2.1",
         "eslint-plugin-require-extensions": "^0.1.3",
-        "eslint-plugin-sonarjs": "^2.0.0",
-        "eslint-plugin-unicorn": "^55.0.0",
-        "istanbul-smart-text-reporter": "^1.1.4",
-        "markdown-code-example-inserter": "^2.0.3",
-        "npm-check-updates": "^17.1.0",
+        "eslint-plugin-sonarjs": "^2.0.4",
+        "eslint-plugin-unicorn": "^56.0.1",
+        "istanbul-smart-text-reporter": "^1.1.5",
+        "markdown-code-example-inserter": "^3.0.2",
+        "npm-check-updates": "^17.1.11",
         "prettier": "^3.3.3",
-        "prettier-plugin-interpolated-html-tags": "^1.0.5",
+        "prettier-plugin-interpolated-html-tags": "^2.0.0",
         "prettier-plugin-jsdoc": "^1.3.0",
         "prettier-plugin-multiline-arrays": "^3.0.6",
-        "prettier-plugin-organize-imports": "^4.0.0",
-        "prettier-plugin-packagejson": "^2.5.1",
+        "prettier-plugin-organize-imports": "^4.1.0",
+        "prettier-plugin-packagejson": "^2.5.3",
         "prettier-plugin-sort-json": "^4.0.0",
         "prettier-plugin-toml": "^2.0.1",
-        "prisma": "^5.18.0",
+        "prisma": "^5.22.0",
         "prisma-frontend": "./",
-        "type-fest": "^4.25.0",
-        "typedoc": "^0.26.6",
-        "typescript": "^5.5.4",
-        "typescript-eslint": "^8.2.0",
-        "virmator": "^13.2.10"
+        "type-fest": "^4.27.0",
+        "typedoc": "^0.26.11",
+        "typescript": "^5.6.3",
+        "typescript-eslint": "^8.15.0",
+        "virmator": "^13.8.1"
     },
     "engines": {
         "node": ">=18"
